# WoSafe

./: .gitignore  README.md  package-lock.json  package.json  start-wosafe.ps1
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  emergency_detector.py  gemini_client.py  openai_client.py  report_generator.py  safety_engine.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  emergency.py  endpoints.py  guardian.py  journeys.py  router.py  storage.py  users.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  metrics.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/jobs/: __init__.py  celery_app.py
backend/app/middlewares/: __init__.py  middleware.py
backend/app/models/: __init__.py  ai.py  audit.py  community.py  emergency.py  emergency_contact.py  evidence.py  guardian.py  incident.py  journey.py  location.py  messaging.py  notification.py  report.py  settings.py  user.py
backend/app/notifications/: __init__.py  dispatcher.py  email.py  fcm.py  sms.py  voice.py
backend/app/repositories/: __init__.py  base.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  common.py  journey.py  user.py
backend/app/security/: __init__.py  validation.py
backend/app/services/: __init__.py  ai_service.py  audit_service.py  auth_service.py  community_service.py  emergency_service.py  guardian_service.py  journey_service.py  storage_service.py  user_service.py
backend/app/utils/: __init__.py  helpers.py
backend/app/websocket/: __init__.py  manager.py
backend/nginx/: nginx.conf
backend/scripts/: db_init.py  seed_data.py
backend/tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_emergency.py  test_journeys.py  test_services.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AIGuardian.tsx  AnalyticsPanel.tsx  AuthScreen.tsx  CommunityFeed.tsx  Dashboard.tsx  EmergencySOS.tsx  GuardianMode.tsx  IncidentForm.tsx  LandingPage.tsx  Navigation.tsx  OnboardingFlow.tsx  ProfilePanel.tsx  SafeRoutes.tsx  SafetyMap.tsx  SettingsPanel.tsx
src/services/: api.ts
src/store/: useSafeStore.ts
